# astyle-precommit-hook

./: .pre-commit-hooks.yaml  README.md  astyle-check  setup.cfg
