[metadata]
name=astyle-check
version=1.0
author=Matt Fellenz
author_email=mattf53190@gmail.com
classifiers=
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU General Public License, version 3
	Operating System :: OS Independent
description=AStyle pre-commit hook. Uses `.astylerc` if present.

[options]
python_requires=>=3.8
scripts=astyle-check
